# rstcloth

./: .readthedocs.yml  README.md  pyproject.toml  setup.cfg  tox.ini
.devcontainer/: Dockerfile
.github/workflows/: cd.yml  ci.yml
rstcloth/: __init__.py  rstcloth.py  utils.py
tests/: test_rstcloth.py
