[project]
name = "rstcloth"
version = "0.6.0"
description = "A simple Python API for generating RestructuredText."
authors = [{ name = "Tom Clark" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "sphinx",
    "rst",
    "restructuredtext",
    "documentation",
    "rest",
    "docutils",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "Pygments>=2.12.0,<3",
    "PyYAML>=5,<7",
    "tabulate>=0.8.9,<0.10",
]

[project.optional-dependencies]
docs = [
    "sphinx>=2,<8",
    "sphinx-rtd-theme==1.0.0",
    "sphinx-tabs==3.2.0",
    "sphinx-charts==0.1.2",
]

[project.urls]
Repository = "https://github.com/thclark/rstcloth"

[dependency-groups]
dev = [
    "coverage>=6.2,<7",
    "pre-commit>=2.17.0,<3",
    "pytest-sugar>=0.9.4,<0.10",
    "pytest>=6.2.5,<7",
    "tox>=4.8.0",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["rstcloth"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "D203",
    "D213",
    "FA100",
    "FA102",
    "TRY003",
    "D400",
    "D415",
    "RUF012",
    "B019",
    "TD003",
    "G004",
    "EM101",
    "EM102",
    "COM812",
]
